messages fragment layout chances

--- a/app/src/main/res/layout/fragment_grid_home.xml
+++ b/app/src/main/res/layout/fragment_grid_home.xml
@@ -76,6 +76,7 @@
         android:fontFamily="sans-serif-light"
         android:text="@string/homeFilterResultTxt1"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="#2F80ED"
         android:textSize="18sp"
         android:visibility="gone"
@@ -98,6 +99,7 @@
         android:fontFamily="sans-serif-light"
         android:text="@string/homeFilterResultTxt2"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="#2F80ED"
         android:textSize="18sp"
         android:visibility="gone"
