--- a/app/src/main/res/layout/fragment_empty_home.xml
+++ b/app/src/main/res/layout/fragment_empty_home.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/homeStageImg"
+        android:id="@+id/messagesEmptyImg"
         android:layout_width="219dp"
         android:layout_height="175dp"
         android:layout_alignParentTop="true"
@@ -51,7 +51,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeStageImg" />
+        app:layout_constraintTop_toBottomOf="@+id/messagesEmptyImg" />
 
     <TextView
         android:id="@+id/homeFilterResultTxt2"
