--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -7,6 +7,15 @@
     android:background="@color/backgroundColor">
 
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messagesRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
@@ -23,27 +32,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/messagesRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <ImageView
+        android:id="@+id/messagesEmptyImg"
+        android:layout_width="216dp"
+        android:layout_height="176dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"
+        android:contentDescription="@string/messagesEmptyImg"
+        android:src="@drawable/ic_empty_tray"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/messagesNoMessagesTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/messagesNoMessagesTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="254dp"
         android:fontFamily="sans-serif-light"
         android:text="@string/messagesNoMessages"
         android:textAllCaps="true"
         android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintEnd_toEndOf="@+id/messagesEmptyImg"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/messagesEmptyImg"
+        app:layout_constraintTop_toBottomOf="@+id/messagesEmptyImg"
         tools:visibility="visible" />
 </android.support.constraint.ConstraintLayout>
